tests/ui/errors/snapshots/infer_partial_does_not_implement_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:9:11]
  8 │   let c = Ctx {}
  9 │   c.fatal(c.read())
    ·           ────┬───
    ·               ╰── `Partial<int, error>` does not implement `error`
 10 │ }
    ╰────
  help: Unwrap the `Partial` with `match` first · code: [infer.interface_not_implemented]
