tests/ui/errors/snapshots/infer_pattern_missing_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing pattern fields
   ╭─[test.lis:6:7]
 5 │   let p = Point { x: 1, y: 2 };
 6 │   let Point { x } = p;
   ·       ─────┬─────
   ·            ╰── missing `y`
 7 │ }
   ╰────
  help: Include the missing field, or use `..` to ignore it · code: [infer.pattern_missing_fields]
