tests/ui/errors/snapshots/infer_pipeline_with_literal.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid pipeline
   ╭─[test.lis:1:18]
 1 │ fn test() { x |> 5; }
   ·                  ┬
   ·                  ╰── expected function
   ╰────
  help: Pipeline only supports functions (not lambdas) · code: [parse.invalid_pipeline_target]
