tests/ui/errors/snapshots/infer_pointer_receiver_interface_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:18:14]
 17 │   let w = MyWorker { label: "test", count: 0 }
 18 │   use_worker(w)
    ·              ┬
    ·              ╰── `MyWorker` does not implement `Worker`
 19 │ }
    ╰────
  help: `MyWorker.work` takes `self: Ref<MyWorker>`, so pass a `Ref<MyWorker>` · code: [infer.interface_not_implemented]
