tests/ui/errors/snapshots/infer_prelude_min_rejects_bool.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Bound not satisfied
   ╭─[test.lis:3:7]
 2 │ fn test() -> bool {
 3 │   min(true, false)
   ·       ──┬─
   ·         ╰── does not satisfy `cmp.Ordered`
 4 │ }
   ╰────
  help: The type parameter must be `cmp.Ordered` but the argument is not orderable. Relax the bound or pass an argument that satisfies it · code: [infer.not_orderable_bound]
