tests/ui/errors/snapshots/infer_private_field_access.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Private field
   ╭─[main.lis:5:26]
 4 │ fn main() -> int {
 5 │   let p = shapes.Point { x: 1, y: 2 };
   ·                          ┬
   ·                          ╰── private to `shapes`
 6 │   p.x
   ╰────
  help: Cannot access private field `x` of struct `shapes.Point`. Mark the field as `pub` · code: [resolve.private_field_access]
